unify linux platforms
Signed-off-by: Ruihang Xia <waynestxia@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,14 +49,9 @@ on:
         description: Do not run integration tests during the build
         type: boolean
         default: true
-      build_linux_amd64_artifacts:
+      build_linux_artifacts:
         type: boolean
-        description: Build linux-amd64 artifacts
-        required: false
-        default: false
-      build_linux_arm64_artifacts:
-        type: boolean
-        description: Build linux-arm64 artifacts
+        description: Build linux artifacts (both amd64 and arm64)
         required: false
         default: false
       build_macos_artifacts:
@@ -144,7 +139,7 @@ jobs:
           ./.github/scripts/check-version.sh "${{ steps.create-version.outputs.version }}"
 
       - name: Allocate linux-amd64 runner
-        if: ${{ inputs.build_linux_amd64_artifacts || github.event_name == 'push' || github.event_name == 'schedule' }}
+        if: ${{ inputs.build_linux_artifacts || github.event_name == 'push' || github.event_name == 'schedule' }}
         uses: ./.github/actions/start-runner
         id: start-linux-amd64-runner
         with:
@@ -158,7 +153,7 @@ jobs:
           subnet-id: ${{ vars.EC2_RUNNER_SUBNET_ID }}
 
       - name: Allocate linux-arm64 runner
-        if: ${{ inputs.build_linux_arm64_artifacts || github.event_name == 'push' || github.event_name == 'schedule' }}
+        if: ${{ inputs.build_linux_artifacts || github.event_name == 'push' || github.event_name == 'schedule' }}
         uses: ./.github/actions/start-runner
         id: start-linux-arm64-runner
         with:
@@ -173,11 +168,11 @@ jobs:
 
   build-linux-amd64-artifacts:
     name: Build linux-amd64 artifacts
-    if: ${{ inputs.build_linux_amd64_artifacts || github.event_name == 'push' || github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && inputs.publish_github_release && (inputs.build_linux_amd64_artifacts || inputs.build_linux_arm64_artifacts || inputs.build_macos_artifacts || inputs.build_windows_artifacts)) }}
+    if: ${{ inputs.build_linux_artifacts || github.event_name == 'push' || github.event_name == 'schedule' }}
     needs: [
       allocate-runners,
     ]
-    runs-on: ${{ needs.allocate-runners.outputs.linux-amd64-runner || 'ubuntu-latest' }}
+    runs-on: ${{ needs.allocate-runners.outputs.linux-amd64-runner }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -185,7 +180,6 @@ jobs:
           persist-credentials: false
 
       - uses: ./.github/actions/build-linux-artifacts
-        if: ${{ inputs.build_linux_amd64_artifacts || github.event_name == 'push' || github.event_name == 'schedule' }}
         with:
           arch: amd64
           cargo-profile: ${{ env.CARGO_PROFILE }}
@@ -196,11 +190,11 @@ jobs:
 
   build-linux-arm64-artifacts:
     name: Build linux-arm64 artifacts
-    if: ${{ inputs.build_linux_arm64_artifacts || github.event_name == 'push' || github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && inputs.publish_github_release && (inputs.build_linux_amd64_artifacts || inputs.build_linux_arm64_artifacts || inputs.build_macos_artifacts || inputs.build_windows_artifacts)) }}
+    if: ${{ inputs.build_linux_artifacts || github.event_name == 'push' || github.event_name == 'schedule' }}
     needs: [
       allocate-runners,
     ]
-    runs-on: ${{ needs.allocate-runners.outputs.linux-arm64-runner || 'ubuntu-latest' }}
+    runs-on: ${{ needs.allocate-runners.outputs.linux-arm64-runner }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -208,7 +202,6 @@ jobs:
           persist-credentials: false
 
       - uses: ./.github/actions/build-linux-artifacts
-        if: ${{ inputs.build_linux_arm64_artifacts || github.event_name == 'push' || github.event_name == 'schedule' }}
         with:
           arch: arm64
           cargo-profile: ${{ env.CARGO_PROFILE }}
@@ -219,7 +212,7 @@ jobs:
 
   run-multi-lang-tests:
     name: Run Multi-language SDK Tests
-    if: ${{ inputs.build_linux_amd64_artifacts || github.event_name == 'push' || github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && inputs.publish_github_release && (inputs.build_linux_amd64_artifacts || inputs.build_linux_arm64_artifacts || inputs.build_macos_artifacts || inputs.build_windows_artifacts)) }}
+    if: ${{ inputs.build_linux_artifacts || github.event_name == 'push' || github.event_name == 'schedule' }}
     needs: [
       allocate-runners,
       build-linux-amd64-artifacts,
@@ -228,7 +221,6 @@ jobs:
     with:
       artifact-name: greptime-linux-amd64-${{ needs.allocate-runners.outputs.version }}
       artifact-is-tarball: true
-      skip: ${{ github.event_name == 'workflow_dispatch' && inputs.publish_github_release && !inputs.build_linux_amd64_artifacts }}
 
   build-macos-artifacts:
     name: Build macOS artifacts
@@ -250,7 +242,7 @@ jobs:
     needs: [
       allocate-runners,
     ]
-    if: ${{ inputs.build_macos_artifacts || github.event_name == 'push' || github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && inputs.publish_github_release && (inputs.build_linux_amd64_artifacts || inputs.build_linux_arm64_artifacts || inputs.build_macos_artifacts || inputs.build_windows_artifacts)) }}
+    if: ${{ inputs.build_macos_artifacts || github.event_name == 'push' || github.event_name == 'schedule' }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -258,7 +250,6 @@ jobs:
           persist-credentials: false
 
       - uses: ./.github/actions/build-macos-artifacts
-        if: ${{ inputs.build_macos_artifacts || github.event_name == 'push' || github.event_name == 'schedule' }}
         with:
           arch: ${{ matrix.arch }}
           cargo-profile: ${{ env.CARGO_PROFILE }}
@@ -289,7 +280,7 @@ jobs:
     needs: [
       allocate-runners,
     ]
-    if: ${{ inputs.build_windows_artifacts || github.event_name == 'push' || github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && inputs.publish_github_release && (inputs.build_linux_amd64_artifacts || inputs.build_linux_arm64_artifacts || inputs.build_macos_artifacts || inputs.build_windows_artifacts)) }}
+    if: ${{ inputs.build_windows_artifacts || github.event_name == 'push' || github.event_name == 'schedule' }}
     steps:
       - run: git config --global core.autocrlf false
 
@@ -299,7 +290,6 @@ jobs:
           persist-credentials: false
 
       - uses: ./.github/actions/build-windows-artifacts
-        if: ${{ inputs.build_windows_artifacts || github.event_name == 'push' || github.event_name == 'schedule' }}
         with:
           arch: ${{ matrix.arch }}
           cargo-profile: ${{ env.CARGO_PROFILE }}
@@ -315,7 +305,7 @@ jobs:
 
   release-images-to-dockerhub:
     name: Build and push images to DockerHub
-    if: ${{ inputs.release_images || github.event_name == 'push' || github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && inputs.publish_github_release && (inputs.build_linux_amd64_artifacts || inputs.build_linux_arm64_artifacts || inputs.build_macos_artifacts || inputs.build_windows_artifacts)) }}
+    if: ${{ inputs.release_images || github.event_name == 'push' || github.event_name == 'schedule' }}
     needs: [
       allocate-runners,
       build-linux-amd64-artifacts,
@@ -332,7 +322,6 @@ jobs:
           persist-credentials: false
 
       - name: Build and push images to dockerhub
-        if: ${{ inputs.release_images || github.event_name == 'push' || github.event_name == 'schedule' }}
         uses: ./.github/actions/build-images
         with:
           image-registry: docker.io
@@ -392,7 +381,7 @@ jobs:
 
   publish-github-release:
     name: Create GitHub release and upload artifacts
-    if: ${{ github.event_name == 'push' || github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && inputs.publish_github_release && (inputs.build_linux_amd64_artifacts || inputs.build_linux_arm64_artifacts || inputs.build_macos_artifacts || inputs.build_windows_artifacts)) }}
+    if: ${{ inputs.publish_github_release || github.event_name == 'push' || github.event_name == 'schedule' }}
     needs: [ # The job have to wait for all the artifacts are built.
       allocate-runners,
       build-linux-amd64-artifacts,
