test: fix by holding file handles manually
Signed-off-by: discord9 <discord9@163.com>

--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -5,7 +5,9 @@ edition.workspace = true
 license.workspace = true
 
 [features]
+default = ["testing"]
 dashboard = []
+testing = ["mito2/test"]
 
 [lints]
 workspace = true
