--- a/Cargo.toml
+++ b/Cargo.toml
@@ -188,7 +188,8 @@ reqwest = { version = "0.12", default-features = false, features = [
     "stream",
     "multipart",
 ] }
-rskafka = { git = "https://github.com/influxdata/rskafka.git", rev = "8dbd01ed809f5a791833a594e85b144e36e45820", features = [
+# Branch: feat/keepalive-port
+rskafka = { git = "https://github.com/WenyXu/rskafka.git", rev = "40150bad95fddd39a772dc132ee9e92f8f91fe38", features = [
     "transport-tls",
 ] }
 rstest = "0.25"
