refactor: do OnExhaustedPolicy before running task
Signed-off-by: jeremyhi <fengjiachun@gmail.com>

--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -551,7 +551,7 @@ compress_manifest = false
 #+ experimental_compaction_memory_limit = "0"
 
 ## Behavior when compaction cannot acquire memory from the budget.
-## Options: "wait" (default), "skip", "fail"
+## Options: "wait" (default, 10s), "wait(<duration>)", "skip"
 ## @toml2docs:none-default="wait"
 #+ experimental_compaction_on_exhausted = "wait"
 
