--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -30,6 +30,7 @@ common-error.workspace = true
 common-grpc.workspace = true
 common-macro.workspace = true
 common-meta.workspace = true
+common-memory-manager.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
 common-runtime.workspace = true
