--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -100,14 +100,14 @@ ca_cert_path = ""
 ## Watch for certificate file changes and auto reload
 watch = false
 
-## The etcd options.
-## Only applicable when using etcd as the metadata store.
-#+ [etcd]
-## The keep alive timeout for etcd client.
+## The backend options.
+## Currently, only applicable when using etcd as the metadata store.
+#+ [backend_options]
+## The keep alive timeout for backend client.
 #+ keep_alive_timeout = "3s"
-## The keep alive interval for etcd client.
+## The keep alive interval for backend client.
 #+ keep_alive_interval = "10s"
-## The connect timeout for etcd client.
+## The connect timeout for backend client.
 #+ connect_timeout = "3s"
 
 ## The gRPC server options.
