--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -43,6 +43,10 @@ body_limit = "64MB"
 ## Set to 0 to disable the limit. Default: "0" (unlimited)
 ## @toml2docs:none-default
 #+ max_total_body_memory = "1GB"
+## Policy when memory quota is exhausted.
+## Supports: "wait" (default, 10s timeout), "wait(<duration>)" (e.g., "wait(30s)"), "fail"
+## @toml2docs:none-default
+#+ memory_exhausted_policy = "wait"
 ## HTTP CORS support, it's turned on by default
 ## This allows browser to access http APIs without CORS restrictions
 enable_cors = true
@@ -67,6 +71,10 @@ runtime_size = 8
 ## Set to 0 to disable the limit. Default: "0" (unlimited)
 ## @toml2docs:none-default
 #+ max_total_message_memory = "1GB"
+## Policy when memory quota is exhausted.
+## Supports: "wait" (default, 10s timeout), "wait(<duration>)" (e.g., "wait(30s)"), "fail"
+## @toml2docs:none-default
+#+ memory_exhausted_policy = "wait"
 ## The maximum connection age for gRPC connection.
 ## The value can be a human-readable time string. For example: `10m` for ten minutes or `1h` for one hour.
 ## Refer to https://grpc.io/docs/guides/keepalive/ for more details.
