--- a/src/standalone/Cargo.toml
+++ b/src/standalone/Cargo.toml
@@ -15,6 +15,7 @@ common-base.workspace = true
 common-config.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
+common-memory-manager.workspace = true
 common-meta.workspace = true
 common-options.workspace = true
 common-procedure.workspace = true
