feat(cli): support RaftEngine store backend for metadata snapshot operations
Signed-off-by: WenyXu <wenymedia@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -203,6 +203,7 @@ reqwest = { version = "0.12", default-features = false, features = [
     "stream",
     "multipart",
 ] }
+url = "2.3"
 # Branch: feat/request-timeout
 rskafka = { git = "https://github.com/GreptimeTeam/rskafka.git", rev = "f5688f83e7da591cda3f2674c2408b4c0ed4ed50", features = [
     "transport-tls",
