--- a/src/cli/Cargo.toml
+++ b/src/cli/Cargo.toml
@@ -60,6 +60,7 @@ serde_json.workspace = true
 servers.workspace = true
 session.workspace = true
 snafu.workspace = true
+standalone.workspace = true
 store-api.workspace = true
 table.workspace = true
 tokio.workspace = true
